[gd_scene format=3 uid="uid://dt3gxy7kk87wx"]

[ext_resource type="Script" uid="uid://cgj4fr1i2n4ko" path="res://main_screen.gd" id="1_wi85j"]
[ext_resource type="Texture2D" uid="uid://dia2oawvjtnls" path="res://art/mask.png" id="2_y1wm0"]
[ext_resource type="Texture2D" uid="uid://dmqtgtjjxofd6" path="res://art/main_character.png" id="3_qm5cq"]

[node name="Main Screen" type="Control" unique_id=1727765074]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wi85j")
metadata/_edit_lock_ = true

[node name="Start Button" type="Button" parent="." unique_id=1849658384]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -36.0
offset_right = 40.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_y1wm0")
icon_alignment = 1
expand_icon = true
metadata/_edit_lock_ = true

[node name="MainCharacter" type="Sprite2D" parent="." unique_id=703344890]
unique_name_in_owner = true
position = Vector2(237.00002, 286)
scale = Vector2(6.5, 6.5)
texture = ExtResource("3_qm5cq")
hframes = 4
vframes = 2
frame = 4
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="." unique_id=1710350297]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -87.0
offset_right = 104.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Fellow Face"
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="." unique_id=67788614]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = 36.0
offset_right = 76.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Put on your mask to begin"

[node name="Label3" type="Label" parent="." unique_id=234963162]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 56.0
offset_right = 168.0
offset_bottom = 105.0
text = "I am not happy
"

[node name="Label6" type="Label" parent="." unique_id=765739888]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 96.0
offset_right = 168.0
offset_bottom = 145.0
text = "I hate having to
wear this mask"

[node name="Label5" type="Label" parent="." unique_id=738524173]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 160.0
offset_right = 168.0
offset_bottom = 235.0
text = "Having to blend in
with society...
"

[node name="Label7" type="Label" parent="." unique_id=325004570]
unique_name_in_owner = true
layout_mode = 0
offset_left = 320.0
offset_top = 80.0
offset_right = 512.0
offset_bottom = 181.0
text = "I'll go and look
for someone who
will accept me
without my mask"

[node name="Skip Button" type="Button" parent="." unique_id=2119446765]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Skip"
metadata/_edit_lock_ = true

[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Start Button" to="Start Button" method="_on_pressed"]
[connection signal="pressed" from="Skip Button" to="." method="_on_skip_button_pressed"]
